2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_id): Create legacy OID directly
	and update nvti directly.
 	(script_oid): Replace call of plug_set_oid by nvti_set_oid.

	* misc/plugutils.c (plug_set_id, plug_set_oid): Removed the now
	unused functions.

	* misc/plugutils.h: Removed protos accordingly.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (plug_set_id): Don't store the ID in the
	arglist structure anymore. Now use g_strdup_printf to create
	the legacy oid.
	(plug_get_id): Removed. Not used anywhere.
	(plug_set_oid): If a oid is set, any previous set legacy oid
	will now be overwritten.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_category): Replaced call of
	plug_set_category by nvti_set_category.

	* misc/plugutils.c (plug_set_nvti, plug_set_category): Removed
	the now unused functions.

	* misc/plugutils.h: Removed protos accordingly.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_cve_id): Replaced call of
	plug_set_cve_id by nvti_add_cve.
	(script_bugtraq_id): Replaced call of plug_set_bugtraq_id by
	nvti_add_bid.

	* misc/plugutils.c (plug_set_cve_id, plug_set_bugtraq_id,
	plug_set_sign_key_ids, plug_require_key, plug_mandatory_key,
	plug_exclude_key, plug_require_port, plug_require_udp_port): Removed.
	These functions are not used anymore.

	* misc/plugutils.h: Removed protos accordingly.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c (plug_set_id, plug_set_oid, plug_set_cve_id,
	plug_set_bugtraq_id, plug_set_xref, plug_set_tag, plug_set_sign_key_ids,
	plug_require_key, plug_get_required_keys, plug_mandatory_key,
	plug_get_mandatory_keys, plug_exclude_key, plug_get_excluded_keys,
	plug_require_port, plug_get_required_ports, plug_require_udp_port,
	plug_get_required_udp_ports, plug_set_dep, plug_get_deps,