@@ -304,9 +304,10 @@ else (NOT LIBSSH_FOUND)
   execute_process (COMMAND pkg-config --libs libssh
     OUTPUT_VARIABLE LIBSSH_LDFLAGS
     OUTPUT_STRIP_TRAILING_WHITESPACE)
+  set (LIBSSH_PKGCONFIG TRUE)
 endif (NOT LIBSSH_FOUND)
 
-if (LIBSSH_FOUND)
+if (LIBSSH_FOUND AND NOT LIBSSH_PKGCONFIG)
   if (NOT LIBSSH_CFLAGS)
     set (LIBSSH_CFLAGS "-I${LIBSSH_INCLUDE_DIRS}")
   endif (NOT LIBSSH_CFLAGS)
@@ -314,7 +315,7 @@ if (LIBSSH_FOUND)
     get_filename_component (LIBSSH_LIB_DIR ${LIBSSH_LIBRARIES} PATH)
     set (LIBSSH_LDFLAGS "-L${LIBSSH_LIB_DIR} -lssh")
   endif (NOT LIBSSH_LDFLAGS)
-endif (LIBSSH_FOUND)
+endif (LIBSSH_FOUND AND NOT LIBSSH_PKGCONFIG)
 
 set (EXTRA_LIBS "${GPGME_LDFLAGS}")
 set (EXTRA_CFLAGS "${GPGME_CFLAGS}")
